--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="container-welcome">
                 <h1>Elisian</h1>
-                <h2>Jummp And Get Rich</h2>
-                <p>To collect coins you have to jump by pressing arrow key up, but be aware  from tax collectors too 👀! How many coins do you thing you are going to collect?</p>
+                <h2>Jummp And Score</h2>
+                <p>To collect coins you have to jump by pressing arrow key up, but be aware  from the killer too 👀! How many coins do you think you are going to collect?</p>
                 <button id="start">Start Game</button>
             </div>
             <div id="canvas-container">
