--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <div class="container">
             <div class="container-welcome">
-                <h1>Elisian</h1>
+                <h1>Elysian</h1>
                 <h2>Jump And Score</h2>
                 <p>To collect coins you have to jump by pressing arrow key up, but be aware  from the killer too 👀! How many coins do you think you are going to collect?</p>
                 <button id="start">Start Game</button>
